PROJECT(NAS)
CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

#SET(DAEMON_PATH ${CMAKE_CURRENT_SOURCE_DIR}/src/daemon)
#SET(LOG_PATH ${CMAKE_CURRENT_SOURCE_DIR}/src/log)
SET(SRC_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET(RTSP_SRC_PATHH ${CMAKE_CURRENT_SOURCE_DIR}/src/rtsp)
SET(Base_SRC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/src/base)
SET(TEST_PATH ${CMAKE_CURRENT_SOURCE_DIR}/test)
SET(ROOT_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include)
SET(ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

SET(LIB_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)
SET(BIN_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)

#MESSAGE(STATUS "Project upnp directory:" ${UPNP_TTS_SDK_ROOT_PATHPATH}) 
if(DEBUG_FLAG)
    SET(DEBUG_FLAG "-g")
    SET(BUILD_CONFIGURATION_ "debug")
else()
    SET(DEBUG_FLAG "-DNDEBUG")
    SET(BUILD_CONFIGURATION "release")
endif()

SET(HCI_WARNINGS_SETTING "-Wall -Wextra -Wno-missing-field-initializers -Wno-deprecated -Wno-unused-parameter -Wno-deprecated-declarations -Wno-unused-function -Wno-unused-variable")
SET(C_CPP_FLAGS_ "${C_CPP_FLAGS_} -static-libstdc++ -std=c++11 -pthread -g -fPIC -Wl,--no-undefined -O2 -DUSE_COMMON_LIB ${DEBUG_FLAG} ${OS_FLAG} ${HCI_WARNINGS_SETTING}")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${C_CPP_FLAGS_}")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${C_CPP_FLAGS_}")

set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

#ADD_SUBDIRECTORY(${LOG_PATH})
#ADD_SUBDIRECTORY(${DAEMON_PATH})
ADD_SUBDIRECTORY(${Base_SRC_PATH})
ADD_SUBDIRECTORY(${RTSP_SRC_PATHH})
ADD_SUBDIRECTORY(${TEST_PATH})
